# test-task-studio-team

./: .env.dist  .gitignore  README.md  bot.py  db.sqlite3  django_app.py  django_setup.py  package-lock.json  package.json  pyproject.toml
dashboard/: package-lock.json  package.json
dashboard/public/: index.html
dashboard/src/: App.jsx  index.scss  links.js  theme.js
dashboard/src/componets/: BarChart.jsx  FilterMessages.jsx  Message.jsx  Message.scss  StatBox.jsx  TeamProfile.jsx
dashboard/src/hooks/: index.jsx
dashboard/src/scenes/aboutTeam/: index.jsx
dashboard/src/scenes/changeCommand/: index.jsx
dashboard/src/scenes/dashboard/: index.jsx
dashboard/src/scenes/faq/: index.jsx
dashboard/src/scenes/global/: Sidebar.jsx  TopBar.jsx
tgbot/: config.py
tgbot/handlers/: echo.py  news.py  user.py  weather.py
tgbot/keyboards/: callback_datas.py  inline.py
tgbot/middlewares/: integrations.py  users_manager.py
tgbot/misc/: __init__.py  generate_weather_image.py  misc.py  set_bot_commands.py
tgbot/models/: db_commands.py
tgbot/services/: aiohttp_service.py  config.py  exceptions.py  types.py
tgdjango/: db.sqlite3  manage.py
tgdjango/app/: abstracts.py  admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
tgdjango/app/migrations/: 0001_initial.py  0002_alter_messageresponse_options_and_more.py  0003_message_command.py  0004_profile_avatar_url_alter_message_command.py  0005_alter_profile_avatar_url.py  0006_alter_response_photo_url.py
tgdjango/tgdjango/: settings.py  urls.py
(+1 files in other folders)
